--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,8 +10,8 @@
             android:title="首页" />
         <item
             android:id="@+id/personal"
-            android:icon="@drawable/ic_home"
-            android:title="个人中心" />
+            android:icon="@drawable/member"
+            android:title="注册会员" />
         <item
             android:id="@+id/relation"
             android:icon="@drawable/ic_chat"
@@ -22,8 +22,8 @@
             android:title="健身计划" />
         <item
             android:id="@+id/setting"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="设置" />
+            android:icon="@drawable/member"
+            android:title="教练列表" />
     </group>
 
     <item android:title="Communicate">
