--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,17 +21,23 @@
             android:icon="@drawable/ic_schedule"
             android:title="健身计划" />
         <item
-            android:id="@+id/setting"
+            android:id="@+id/trainer"
             android:icon="@drawable/member"
             android:title="教练列表" />
+        <item
+            android:id="@+id/video"
+            android:icon="@drawable/member"
+            android:title="健身视频" />
+
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/email"
                 android:icon="@drawable/ic_menu_share"
-                android:title="分享" />
+                android:title="发送邮件" />
+
         </menu>
     </item>
 
